// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioSummary Component Snapshot Test renders correctly with negative profit 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-75k7kp-MuiContainer-root"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1ke64am-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Portfolio Summary
    </h4>
    <div
      class="MuiBox-root css-1i43dhb"
    >
      <div
        class="MuiBox-root css-gg4vpm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1edfpdg-MuiTypography-root"
        >
          Total Worth:
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1ub6n32-MuiTypography-root"
        >
          $10000.00
        </p>
      </div>
      <div
        class="MuiBox-root css-gg4vpm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1edfpdg-MuiTypography-root"
        >
          Total Profit/Loss:
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-12e3s4q-MuiTypography-root"
        >
          $-1500.00 (-15.00%)
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioSummary Component Snapshot Test renders correctly with positive profit 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-75k7kp-MuiContainer-root"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1ke64am-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Portfolio Summary
    </h4>
    <div
      class="MuiBox-root css-1i43dhb"
    >
      <div
        class="MuiBox-root css-gg4vpm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1edfpdg-MuiTypography-root"
        >
          Total Worth:
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1ub6n32-MuiTypography-root"
        >
          $10000.00
        </p>
      </div>
      <div
        class="MuiBox-root css-gg4vpm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1edfpdg-MuiTypography-root"
        >
          Total Profit/Loss:
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-10tsa1k-MuiTypography-root"
        >
          $2000.00 (20.00%)
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioSummary Component Snapshot Test renders correctly with zero profit 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-75k7kp-MuiContainer-root"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1ke64am-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Portfolio Summary
    </h4>
    <div
      class="MuiBox-root css-1i43dhb"
    >
      <div
        class="MuiBox-root css-gg4vpm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1edfpdg-MuiTypography-root"
        >
          Total Worth:
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1ub6n32-MuiTypography-root"
        >
          $10000.00
        </p>
      </div>
      <div
        class="MuiBox-root css-gg4vpm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1edfpdg-MuiTypography-root"
        >
          Total Profit/Loss:
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-10tsa1k-MuiTypography-root"
        >
          $0.00 (0.00%)
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
